<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>agt_chassis_bridge</name>
  <version>0.0.1</version>
  <description>Control bridge between cmd_vel and chassis control</description>
  <maintainer email="dev@agt.com">AGT Dev Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>agt_msgs</depend>
  <depend>agt_common</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
