<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>agt_mapping_bringup</name>
  <version>0.0.1</version>
  <description>SLAM and mapping launch configurations</description>
  <maintainer email="dev@agt.com">AGT Dev Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>cartographer</exec_depend>
  <exec_depend>cartographer_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
